# mcpsynth

./: .gitignore  .gitmodules  Dockerfile.vllm  MSc AI Thesis Rubric.xlsx  Makefile  README.md  RESEARCH_PLAN.md  gen_api_overview.py  gen_api_scatter.py  gen_figure.py  gen_outcomes.py  gen_pipeline.py  gen_pipeline_slide.py  gen_pipeline_thesis.py  gen_pipeline_thesis_v2.py  gen_pipeline_thesis_v3.py  gen_pipeline_thesis_v4.py  gen_pipeline_v2.py  gen_pipeline_v3.py  gen_pipeline_v4.py  gen_results_figures.py  gen_results_synth_models.py  gen_results_viz.py  kry_logit_lens_h100.ipynb  notes_models_apis.md  pyproject.toml  serve_qwen_h100.py  thesis-draft.tex
.mcp/zulipchat/: zulipchat.duckdb
benchmark/: COMMANDS.md  README.md  RESULTS.md  TASK_CREATION_GUIDE.md  TASK_TEMPLATE.md  __init__.py  results_table.tex  synth_model_table.tex
benchmark/agent/: __init__.py  cli_session.py  harness.py  mcp_server.py  models.py
benchmark/configs/: adyen_real_api.yaml  ebay_buy_real_api.yaml  ebay_commerce_real_api.yaml  ebay_sell_real_api.yaml  github_real_api.yaml  hubspot_real_api.yaml  (+11 more)
logprob_res/: logit_lens_alphavantage.json  logit_lens_confluence.json  logit_lens_ebay_buy.json  logit_lens_ebay_commerce.json  logit_lens_ebay_sell.json  logit_lens_github.json  logit_lens_h100.ipynb  logit_lens_jira.json  logit_lens_mastodon.json  logit_lens_notion.json  logit_lens_openweathermap.json  logit_lens_shopify.json  logit_lens_spoonacular.json  logit_lens_stripe.json  logit_lens_zulip.json
master_ai_thesis_template-master/: .gitignore  README.md  msc_thesis.tex  mscaithesis.cls
(+10228 files in other folders)
